[gd_scene load_steps=7 format=3 uid="uid://cju8t4vsenjnj"]

[ext_resource type="StyleBox" uid="uid://bftp76pqmv3oi" path="res://Content/UI/Panels/DefaultPanelWithoutBorders.tres" id="1_le01m"]
[ext_resource type="Script" path="res://Content/UI/Interface/DeadMenu/dead_menu.gd" id="1_xk66x"]
[ext_resource type="PackedScene" uid="uid://bvonua6sbs2lr" path="res://Content/UI/Buttons/Restart/RestartButton.tscn" id="2_bhs4g"]
[ext_resource type="PackedScene" uid="uid://bhiiuk1ug31lq" path="res://Content/UI/Buttons/No/NoButton.tscn" id="3_n76cp"]
[ext_resource type="PackedScene" uid="uid://bawc6jfnynt2" path="res://Content/UI/Buttons/RewordedRestart/RewordedButton.tscn" id="4_wt5hd"]
[ext_resource type="Script" path="res://Content/UI/local.gd" id="6_cc0ft"]

[node name="DeadMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xk66x")

[node name="GroupBox" type="Control" parent="."]
custom_minimum_size = Vector2(220, 220)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -110.0
offset_top = -110.0
offset_right = 110.0
offset_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="GroupBox"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(110, 110)
theme_override_styles/panel = ExtResource("1_le01m")

[node name="RestartButton" parent="GroupBox/Panel" instance=ExtResource("2_bhs4g")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 6.0
offset_top = 10.0
offset_right = 101.0
offset_bottom = 105.0
grow_horizontal = 2

[node name="NoButton" parent="GroupBox/Panel" instance=ExtResource("3_n76cp")]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -102.0
offset_top = 10.0
offset_right = -7.0
offset_bottom = 105.0
grow_horizontal = 2

[node name="RewordedButton" parent="GroupBox/Panel" instance=ExtResource("4_wt5hd")]
layout_mode = 1
anchors_preset = 5
anchor_top = 0.0
anchor_bottom = 0.0
offset_left = -102.0
offset_top = 116.0
offset_right = 102.0
offset_bottom = 211.0
grow_vertical = 1

[node name="Label" type="Label" parent="GroupBox/Panel/RewordedButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = -37.5
offset_right = 90.0
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.00351917, 0.00351917, 0.00351917, 1)
theme_override_font_sizes/font_size = 20
text = "Продолжить за рекламу"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
script = ExtResource("6_cc0ft")
Name_Text = "continueforadd"

[connection signal="pressed" from="GroupBox/Panel/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="GroupBox/Panel/NoButton" to="." method="_on_no_button_pressed"]
[connection signal="pressed" from="GroupBox/Panel/RewordedButton" to="." method="_on_reworded_button_pressed"]
